--- a/l1m4l9q0r4.html
+++ b/l1m4l9q0r4.html
@@ -1,1 +1,1 @@
-<h1 data-label="512802" class="ltx_title_section">Working with measurement data</h1><div></div>
+<h1 data-label="512802" class="ltx_title_section">Working with measurement data</h1>
