--- a/ogb2smrpii4.html
+++ b/ogb2smrpii4.html
@@ -1,1 +1,1 @@
-<div>Pint also includes&nbsp;<a href="http://pint.readthedocs.io/en/stable/numpy.html" target="_blank">support for numpy arrays</a>, as shown in this example:</div><div></div><div></div><h1 data-label="662059" class="ltx_title_section">Installing Python&nbsp;</h1><div></div><h2 data-label="140511" class="ltx_title_subsection">Using the Anaconda Navigator default installer</h2>
+<div>Pint also includes&nbsp;<a href="http://pint.readthedocs.io/en/stable/numpy.html" target="_blank">support for numpy arrays</a>, as shown in this example:</div><div></div>
