--- a/figures/Sample_Pint_Notebook/caption.html
+++ b/figures/Sample_Pint_Notebook/caption.html
@@ -1,1 +1,1 @@
-<div data-label="234253">Excerpt of a Jupyter notebook with sample unit-based calculations and conversions in Python using the Pint package. </div>
+<div data-label="625931">This is a caption</div>
