--- a/figures/Sample_Pint_Notebook/caption.html
+++ b/figures/Sample_Pint_Notebook/caption.html
@@ -1,1 +1,1 @@
-<div data-label="625931">Extract of a Jupyter notebook running </div>
+<div data-label="625931">Extract of the Jupyter notebook running&nbsp;</div>
