--- a/figures/Sample_Pint_Notebook/caption.html
+++ b/figures/Sample_Pint_Notebook/caption.html
@@ -1,1 +1,1 @@
-<div data-label="625931">an extract of the Jupyter notebook PintTest.ipynb&nbsp; demonstr</div>
+<div data-label="625931">an extract of the Jupyter notebook PintTest.ipynb&nbsp; demonstrati</div>
