--- a/p81i0v5na88.html
+++ b/p81i0v5na88.html
@@ -1,1 +1,1 @@
-<div></div>
+<div>and issue the&nbsp;&nbsp;<code>%matplotlib inline</code> command&nbsp;<u>before</u> the&nbsp; import pyplot command </div><div></div><div>Fig.&nbsp;<span class="au-ref raw v1">\ref{780306}</span> below&nbsp; provides an example of a Matplotlib pyplot graph with error bars to indicate the uncertainty for each data point.&nbsp; Click on the &lt;/&gt; Code button to the left of Fig.&nbsp;&nbsp;<span class="au-ref raw v1">\ref{780306}</span> to view the Python code used to generate this graph.&nbsp;</div>
