--- a/93lntvb0jl.html
+++ b/93lntvb0jl.html
@@ -1,1 +1,1 @@
-<blockquote class="au-no-left-border"><div></div></blockquote><div></div>
+<blockquote class="au-no-left-border"><div>analyzer angle,voltage (mV),dV (mV)</div><div>0,32.3625,0.014</div><div>15,30.0808,0.2</div><div>30,24.0285,0.3</div><div>45,15.8815,0.3</div></blockquote><div></div>
