--- a/jq3iou3667o.html
+++ b/jq3iou3667o.html
@@ -1,1 +1,1 @@
-<div></div><div>We are now going to import this data into Python as three separate arrays</div><div></div>
+<div></div><div>We are now going to import this data into Python as three separate arrays, one for each colu</div><div></div>
