--- a/figures/Fit_to_data/caption.html
+++ b/figures/Fit_to_data/caption.html
@@ -1,1 +1,1 @@
-<div data-label="680456">Nonlinear curve fit of data to mathematical model $I(\theta) = </div>
+<div data-label="680456">Nonlinear curve fit of data to mathematical model $I(\theta) = I</div>
