--- a/figures/Fit_to_data/caption.html
+++ b/figures/Fit_to_data/caption.html
@@ -1,1 +1,1 @@
-<div data-label="680456">Nonlinear curve fit of data to mathematical model </div>
+<div data-label="680456">Nonlinear curve fit of data to mathematical model <span class="math ltx_Math v1">\(I(\theta)=I_0\cos^2(\theta-\theta_0)+\text{C}\)</span></div>
