--- a/ijo0203no2s.html
+++ b/ijo0203no2s.html
@@ -1,1 +1,1 @@
-<h1 data-label="822768" class="ltx_title_section">Curve fitting</h1><div>&nbsp;Curve fitting requires a mathematical model, </div><div></div>
+<h1 data-label="822768" class="ltx_title_section">Curve fitting</h1><div>&nbsp;Curve fitting requires a mathematical model, initial e</div><div></div>
