--- a/jdpvkteoamo.html
+++ b/jdpvkteoamo.html
@@ -1,1 +1,1 @@
-<div>and the corresponding Python function </div><div></div><div></div>
+<div>and the corresponding Python function is </div><div></div><div></div>
