--- a/h3sd32muvhs.html
+++ b/h3sd32muvhs.html
@@ -1,1 +1,1 @@
-<h2 data-label="205170" class="ltx_title_subsection">curve fit command</h2><div></div><div>Here is the code used to generate the </div><div></div>
+<h2 data-label="205170" class="ltx_title_subsection">curve fit command</h2><div></div><div>Here is the code used to&nbsp;</div><div></div>
