--- a/uufq3s7lo2c.html
+++ b/uufq3s7lo2c.html
@@ -1,1 +1,1 @@
-<div>In this case, the results were as follows: </div><div></div><blockquote class="au-no-left-border"><div></div></blockquote><pre>I_0    =  32.621 ± 0.012  mV offset =  0.0226 ± 0.009  mV phi_0  =  -0.0182 ± 0.0009 radian        =  -1.0410 ± 0.0495 degrees</pre>
+<div>In this case, the results were as follows: </div><div></div><blockquote class="au-no-left-border"><div></div></blockquote>
