--- a/uufq3s7lo2c.html
+++ b/uufq3s7lo2c.html
@@ -1,1 +1,1 @@
-<div>In this case, the results were as follows: </div><div></div><blockquote class="au-no-left-border"><div>I_0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; = 32.621 ± 0.012 mv</div><div>offset = 0.0226 ± 0.</div></blockquote>
+<div>In this case, the results were as follows: </div><div></div><blockquote class="au-no-left-border"><div>I_0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; = 32.621 ± 0.012 mv</div><div>offset = 0.0226 ± 0.009</div></blockquote>
