--- a/bc8iul9dbms.html
+++ b/bc8iul9dbms.html
@@ -1,1 +1,1 @@
-<h3 data-label="395238" class="ltx_title_subsubsection">Now let's run the curve fit command. </h3><div></div>
+<div>Now let's run the curve fit command. </div><div></div>
