--- a/jdpvkteoamo.html
+++ b/jdpvkteoamo.html
@@ -1,1 +1,1 @@
-<div>where </div><div></div><div>and the corresponding Python function is </div>
+<div>where $\</div><div></div><div>and the corresponding Python function is </div>
