--- a/jdpvkteoamo.html
+++ b/jdpvkteoamo.html
@@ -1,1 +1,1 @@
-<div>where $\theta$ is </div><div></div><div>and the corresponding Python function is </div>
+<div>where  is </div><div></div><div>and the corresponding Python function is </div>
