--- a/jdpvkteoamo.html
+++ b/jdpvkteoamo.html
@@ -1,1 +1,1 @@
-<div>where &nbsp;<span class="math ltx_Math v1">\(\theta_0\)</span> is the angle of the first (reference) linear polarizer </div>
+<div>where &nbsp;<span class="math ltx_Math v1">\(\theta_0\)</span> is the angle of the first (reference) linear polarizer and </div>
