--- a/jdpvkteoamo.html
+++ b/jdpvkteoamo.html
@@ -1,1 +1,1 @@
-<div>where &nbsp;<span class="math ltx_Math v1">\(\theta_0\)</span> is the angle of the first (reference) linear polarizer, <span class="math ltx_Math v1">\(\theta\)</span> is the angle of the second linear pola</div>
+<div>where &nbsp;<span class="math ltx_Math v1">\(\theta_0\)</span> is the angle of the first (reference) linear polarizer, <span class="math ltx_Math v1">\(\theta\)</span> is the angle of the second linear polarize</div>
