--- a/h3sd32muvhs.html
+++ b/h3sd32muvhs.html
@@ -1,1 +1,1 @@
-<h2 data-label="205170" class="ltx_title_subsection">curve fit code</h2><div></div><div>Here is the code used to carry out the curve fit shown in FIg. <span class="au-ref raw v1">\ref{680456}</span>. </div><div></div><div>First, let's take care of the initial setup: </div>
+<h2 data-label="205170" class="ltx_title_subsection">curve fit code</h2><div></div><div>Here is the code used to carry out the curve fit of shown in FIg. <span class="au-ref raw v1">\ref{680456}</span>. </div><div></div><div>First, let's take care of the initial setup: </div>
