--- a/bc8iul9dbms.html
+++ b/bc8iul9dbms.html
@@ -1,1 +1,1 @@
-<div>Now let's run the curve fit command: </div>
+<div>Now let's run the <a href="https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html#scipy.optimize.curve_fit" target="_blank">curve fit</a> command: </div>
