--- a/heq51l9rv84.html
+++ b/heq51l9rv84.html
@@ -1,1 +1,1 @@
-<div>And substituting in the results of the parti,&nbsp;</div><div></div><div></div>
+<div>And substituting in for the parti,&nbsp;</div><div></div><div></div>
