--- a/heq51l9rv84.html
+++ b/heq51l9rv84.html
@@ -1,1 +1,1 @@
-<div></div><div>And substituting in for the partial derivatives,&nbsp;</div><div></div><div></div>
+<div></div><div>And substituting in for the partial derivatives,&nbsp;</div><div></div>
